<resources>

    <string name="settings_key_tmp_file">tmp_file</string>
    <string name="settings_key_source_uri">source_uri</string>

    <string name="app_name">PolyGlot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_new">New file</string>
    <string name="action_open">Open file</string>
    <string name="action_save">Save file</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>

    <string name="title_save_language">Save language</string>
    <string name="hint_file_name">File name</string>

    <string name="toast_file_saved">File saved</string>

    <!-- Nav drawer options -->
    <string name="menu_lang_properties">Language properties</string>
    <string name="menu_lexicon">Lexicon</string>
    <string name="menu_part_of_speech">Part of speech</string>
    <string name="menu_classes">Classes</string>
    <string name="menu_grammar">Grammar</string>
    <string name="menu_logographs">Logographs</string>
    <string name="menu_phonology">Phonology</string>
    <string name="soon_default_text">This feature will be coming soon!</string>

    <!-- Language properties screen -->
    <string name="label_lang_name">Language name</string>
    <string name="label_local_lang">Local language</string>
    <string name="label_author">Author / Copyright info</string>
    <string name="label_kerning">Kerning</string>

    <!-- Labels and tooltips for the properties checkboxes -->
    <string name="check_pos_mandatory">Part of speech mandatory</string>
    <string name="check_tooltip_pos_mandatory">Select to enforce selection of a part of speech on each created word.</string>
    <string name="check_local_uniqueness">Local uniqueness</string>
    <string name="check_tooltip_local_uniqueness">Select to enforce mandatory uniqueness for local word equivalents.</string>
    <string name="check_word_uniqueness">Word uniqueness</string>
    <string name="check_tooltip_word_uniqueness">Select to enforce mandatory uniqueness of each word.</string>
    <string name="check_ignore_case">Ignore case</string>
    <string name="check_tooltip_ignore_case">Ignore character casing through PolyGlot. (only applies to western characters).</string>
    <string name="check_disable_ortho_regex">Disable Orthographic regex</string>
    <string name="check_tooltip_disable_ortho_regex">Disable regex features in orthography. (this allows for ignoring case properly).</string>
    <string name="check_enforce_rtl">Enforce RTL</string>
    <string name="check_tooltip_enforce_rtl">Check this to force all conlang text to appear in RTL fashion through PolyGlot. This works even if the character set you are using is not typically RTL.</string>
    <string name="check_local_mandatory">Local mandatory</string>
    <string name="check_tooltip_local_mandatory">Select to enforce mandatory values for local word equivalents.</string>
    <string name="check_override_regex_font">Override regex font</string>
    <string name="check_tooltip_override_regex_font">This overrides the font of all display elements within PolyGlot to show a default font (if your script makes regexes hard to work with).</string>
    <string name="check_local_word_display">Local word lexicon display</string>
    <string name="check_tooltip_local_word_display">Display the local word rather than the conlang word in the lexicon display.</string>

    <!-- Lexeme info screen -->
    <string name="title_activity_lexeme_info">Lexeme info</string>
    <string name="lexeme_info_tab_general">General Info</string>
    <string name="lexeme_utilities">Lexeme utilities</string>
    <string name="lexeme_info_tab_conjugations">Conjugations tables</string>
    <string name="lexeme_info_tab_conjugations_helper">Conjugations selectors</string>
    <string name="lexeme_info_tab_etymology">Etymology</string>
    <string name="lexeme_info_tab_logographs">Logographs</string>

    <string name="label_con_word">Conlang word</string>
    <string name="label_local_word">Local language word</string>
    <string name="label_romanization">Romanization</string>
    <string name="label_pronunciation">Pronunciation</string>
    <string name="label_definition">Definition</string>
    <string name="label_part_of_speech">Part of speech</string>
    <string name="label_tooltip_class">%1$s value</string>

    <string name="check_override_pronunciation">Override Pronunciation Rules</string>
    <string name="check_tooltip_override_pronunciation">Select this to override auto pronunciation generation for this word.</string>
    <string name="check_override_rules">Override Lexical Rules</string>
    <string name="check_tooltip_override_rules">Overrides all typically enforced requirements for this word, allowing it to be saved as an exception</string>

    <!-- Lexeme conjugations -->
    <string name="message_no_conjugations">No conjugations/declensions for %1$s</string>
    <string name="message_no_word_type">Word must have a part of Speech set and the part of speech must have declensions defined before using this feature.</string>
    <string name="spinner_rows">Rows</string>
    <string name="spinner_columns">Columns</string>
    <string name="check_override_conjugations">Override autogeneration</string>
    <string name="check_tooltip_override_conjugations">Check to override autogeneration of declension forms (if autogeneration patterns exist)</string>

    <!-- Lexeme etymology -->
    <string name="etymology_tab_parents">Etymons</string>
    <string name="etymology_tab_children">Derivatives</string>
    <string name="fab_add_etymon_internal">Add internal etymon</string>
    <string name="fab_add_etymon_external">Add external etymon</string>
    <string name="title_new_external_etymon">New external etymon</string>
    <string name="msg_new_external_etymon">Enter details for new external etymon</string>
    <string name="label_external_etymon">External etymon</string>
    <string name="label_source_language">Source language</string>

    <!-- Part of speech info screen -->
    <string name="menu_simple_autogeneration">Autogeneration (simple)</string>
    <string name="menu_classic_autogeneration">Autogeneration rules</string>
    <string name="label_pos_name">Part of speech name</string>
    <string name="label_pos_gloss">Part of speech gloss</string>
    <string name="label_pos_pattern">Pattern</string>
    <string name="label_pos_notes">Notes</string>
    <string name="label_conjugation_name">Conjugation name</string>
    <string name="pos_conjugations">Conjugations/Declensions</string>
    <string name="pos_conjugations_setup">Setup</string>
    <string name="pos_conjugations_autogeneration">Autogeneration</string>
    <string name="btn_clear_deprecated">Clear deprecated conjugations</string>
    <string name="btn_add_rule">Add rule</string>

    <string name="check_definition_mandatory">Definition mandatory</string>
    <string name="check_tooltip_definition_mandatory">Enforce definition of lexemes</string>
    <string name="check_pronunciation_mandatory">Pronunciation mandatory</string>
    <string name="check_tooltip_pronunciation_mandatory">Enforces pronunciation of lexemes</string>
    <string name="check_dimensionless">Non-dimensional</string>
    <string name="check_tooltip_dimensionless">If this is a dimensionless form, such as a gerund.</string>

    <string name="error_pos_name_empty">Name can\'t be empty</string>

    <!-- Autogeneration -->
    <string name="label_autogen_rule_name">Rule name</string>
    <string name="label_autogen_rule_regex">Filter regex</string>
    <string name="rule_information">Rule information</string>
    <string name="label_autogen_wordforms">Wordform</string>
    <string name="check_disable_wordform">Disable wordform</string>
    <string name="check_tooltip_disable_word_form">Disables and hide this conjugation.</string>
    <string name="label_transform_regex">Regex</string>
    <string name="label_transform_replace">Replacement</string>
    <string name="btn_add_transform">Add transform</string>
    <string name="btn_test_wordform">Test wordform</string>

    <string name="label_test_form_base_word">Base test word</string>
    <string name="label_test_form_generated_word">Generated word</string>
    <string name="btn_run_test_wordform">Run test</string>

    <!-- Word classes -->
    <string name="fab_add_word_class">Add new word class</string>
    <string name="fab_add_class_value">Add new value</string>
    <string name="title_activity_word_class_info">Word class info</string>
    <string name="label_word_class_name">Class name</string>
    <string name="check_free_text_class">Free text value</string>
    <string name="check_tooltip_free_text_class">Makes class freely editable text instead of list of possible values.</string>
    <string name="check_associative_class">Associative</string>
    <string name="check_tooltip_associative_class">Makes class a link to another word in your lexicon (e.g. antonyms). </string>

    <!-- Toasts -->
    <string name="toast_lexeme_errors">Invalid word. Press back again to delete it.</string>
    <string name="toast_same_dimension_error">Please select differing Row and Column values.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_internal_root">Add internal root</string>
</resources>