<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_lang_properties">

    <fragment
        android:id="@+id/nav_lang_properties"
        android:name="org.darisadesigns.polyglotlina.android.ui.LangPropertiesFragment"
        android:label="@string/menu_lang_properties"
        tools:layout="@layout/fragment_lang_properties" />

    <fragment
        android:id="@+id/nav_lexicon"
        android:name="org.darisadesigns.polyglotlina.android.ui.Lexicon.LexiconFragment"
        android:label="@string/menu_lexicon"
        tools:layout="@layout/fragment_lexicon" />

    <fragment
        android:id="@+id/nav_part_of_speech"
        android:name="org.darisadesigns.polyglotlina.android.ui.PartsOfSpeech.POSFragment"
        android:label="@string/menu_part_of_speech"
        tools:layout="@layout/fragment_pos" />

    <fragment
        android:id="@+id/nav_classes"
        android:name="org.darisadesigns.polyglotlina.android.ui.WordClasses.WordClassesFragment"
        android:label="@string/menu_classes"
        tools:layout="@layout/fragment_word_classes" />

    <fragment
        android:id="@+id/nav_grammar"
        android:name="org.darisadesigns.polyglotlina.android.ui.SoonFragment"
        android:label="@string/menu_grammar"
        tools:layout="@layout/fragment_soon" />

    <fragment
        android:id="@+id/nav_logographs"
        android:name="org.darisadesigns.polyglotlina.android.ui.SoonFragment"
        android:label="@string/menu_logographs"
        tools:layout="@layout/fragment_soon" />

    <fragment
        android:id="@+id/nav_phonology"
        android:name="org.darisadesigns.polyglotlina.android.ui.Phonology.PhonologyFragment"
        android:label="@string/menu_phonology"
        tools:layout="@layout/fragment_phonology" />

</navigation>