<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LangPropertiesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="606dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/generalCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:contentPadding="16dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/label_lang_name"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtLangName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/label_local_lang"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                        tools:layout_editor_absoluteX="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtLocalLang"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                        tools:layout_editor_absoluteX="4dp">

                        <androidx.fragment.app.FragmentContainerView
                            android:id="@+id/fragment_container_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/checkboxLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/chkPosMandatory"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/check_pos_mandatory"
                                android:tooltipText="@string/check_tooltip_pos_mandatory"/>

                            <CheckBox
                                android:id="@+id/chkWordUniqueness"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/check_word_uniqueness"
                                android:tooltipText="@string/check_tooltip_word_uniqueness"/>

                            <CheckBox
                                android:id="@+id/chkDisableOrthoRegex"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/check_disable_ortho_regex"
                                android:tooltipText="@string/check_tooltip_disable_ortho_regex"/>

                            <CheckBox
                                android:id="@+id/chkLocalMandatory"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/check_local_mandatory"
                                android:tooltipText="@string/check_tooltip_local_mandatory"/>

                            <CheckBox
                                android:id="@+id/chkLocalWordLexiconDisplay"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/check_local_word_display"
                                android:tooltipText="@string/check_tooltip_local_word_display"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/chkLocalUniqueness"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/check_local_uniqueness"
                                android:tooltipText="@string/check_tooltip_local_uniqueness"/>

                            <CheckBox
                                android:id="@+id/chkIgnoreCase"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/check_ignore_case"
                                android:tooltipText="@string/check_tooltip_ignore_case"/>

                            <CheckBox
                                android:id="@+id/chkEnforceRTL"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/check_enforce_rtl"
                                android:tooltipText="@string/check_tooltip_enforce_rtl"/>

                            <CheckBox
                                android:id="@+id/chkOverrideRegexFont"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/check_override_regex_font"
                                android:tooltipText="@string/check_tooltip_override_regex_font"/>
                        </LinearLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/label_kerning"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtKerning"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>