<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.PartsOfSpeech.POSGeneralFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="606dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/generalCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:contentPadding="16dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtPOSNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/label_pos_name"
                        app:layout_constraintTop_toTopOf="parent"
                        app:errorEnabled="true"
                        tools:layout_editor_absoluteX="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPOSName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtGlossLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/label_pos_gloss"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                        app:errorEnabled="true"
                        tools:layout_editor_absoluteX="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtGloss"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtPatternLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/label_pos_pattern"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                        tools:layout_editor_absoluteX="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPattern"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/chkDefinitionMandatory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_definition_mandatory"
                        android:tooltipText="@string/check_tooltip_definition_mandatory"/>

                    <CheckBox
                        android:id="@+id/chkPronunciationMandatory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_pronunciation_mandatory"
                        android:tooltipText="@string/check_tooltip_pronunciation_mandatory"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editorLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                        tools:layout_editor_absoluteX="4dp">

                        <androidx.fragment.app.FragmentContainerView
                            android:id="@+id/fragment_container_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>