<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Lexicon.Etymology.LexemeEtymologyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PolyGlot.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.PolyGlot.PopupOverlay" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            android:theme="@style/Theme.PolyGlot"
            app:tabTextColor="?attr/colorOnPrimary"
            android:background="?attr/colorPrimary">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_parents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etymology_tab_parents"
                />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_children"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etymology_tab_children"
                />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_lexeme_etymology" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_etymon_external"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        app:layout_anchorGravity="top"
        app:layout_anchor="@id/fab_add_etymon_internal"
        app:srcCompat="@drawable/outline_translate_24"
        app:useCompatPadding="true"
        android:contentDescription="@string/fab_add_etymon_external"
        android:tooltipText="@string/fab_add_etymon_external" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_etymon_internal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_input_add"
        app:useCompatPadding="true"
        android:contentDescription="@string/fab_add_etymon_internal"
        android:tooltipText="@string/fab_add_etymon_internal" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>